--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,60 +1,38 @@
-.container {
-    padding: 0 2rem;
-}
-
 .main {
-    min-height: 100vh;
-    padding: 4rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.title a {
-    color: #0070f3;
-    text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-    text-decoration: underline;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
 }
 
 .title {
-    margin: 0;
-    line-height: 1.15;
-    font-size: 4rem;
-    color: #00ADB5;
-
-}
-
-
-.description {
-    text-align: center;
-    color: #EEEEEE;
+  line-height: 1.15;
+  font-size: 2.5rem;
+  color: #eeeeee;
+  margin: 24px 0 0;
 }
 
 .description {
-    margin: 4rem 0;
-    line-height: 1.5;
-    font-size: 1.2rem;
+  margin: 1rem 0 0;
+  line-height: 1.5;
+  font-size: 1.2rem;
+  text-align: center;
+  color: #eeeeee;
 }
 
-
-.grid {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 1080px;
+.iconsContainer {
+  display: flex;
+  margin-top: 24px;
+  justify-content: space-between;
 }
 
-@media (max-width: 600px) {
-    .grid {
-        width: 100%;
-        flex-direction: column;
-    }
+.iconsContainer a {
+  margin: 12px;
+}
+
+.iconsContainer a svg {
+  height: 24px;
+  width: 24px;
 }
