--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -27,7 +27,7 @@
 }
 
 .content a {
-  color: #a2b5bb;
+  color: rgb(148 163 184);
   text-decoration: underline;
 }
 
@@ -41,11 +41,11 @@
 }
 
 .content code {
-  color: #5584ac;
+  color: rgb(165 180 252);
 }
 
 .content strong {
-  color: #47b5ff;
+  color: rgb(56 189 248);
 }
 
 .content blockquote {
@@ -85,34 +85,34 @@
 .summary {
   margin-top: 32px;
   margin-bottom: 32px;
-  background-color: #c1cfc0;
-
   padding: 24px;
   border-radius: 8px;
-  color: #11324d;
 }
 
 .bonus {
   margin-top: 32px;
   margin-bottom: 32px;
-  background-color: #e4d8dc;
+  background-color: rgb(30,41, 59);
   padding: 24px;
   border-radius: 8px;
-  color: #11324d;
+  color: rgb(148, 163, 184);
+  border: 0 solid #e5e7eb
 }
 
 .endNote {
   margin-top: 32px;
   margin-bottom: 32px;
-  background-color: #8fc1d4;
   padding: 24px;
   border-radius: 8px;
-  color: #11324d;
 }
 
 .linkSection {
-  margin-top: 32px;
+  margin-top: 24px;
   font-size: 15px;
+}
+
+.linkSection ul{
+  margin-top: 0;
 }
 
 .linkSection li {
@@ -126,4 +126,54 @@
 .nestedUl p {
   padding: 0;
   margin: 0;
+}
+
+@media only screen and (max-width: 460px) {
+  .content {
+    max-width: 100%;
+    font-size: 15px;
+    margin-top: 0;
+  }
+  .content h1 {
+    font-size: 1.5rem;
+    line-height: 32px;
+  }
+  .content h2{
+    font-size: 1.2rem;
+  }
+  .content h5{
+    font-size: 0.7rem;
+    margin-top: 4px;
+  }
+  .content ul{
+    padding: 0 16px;
+    margin: 0;
+  }
+  .content li{
+    padding: 4px;
+  }
+  .content blockquote{
+    font-size: 14px;
+  }
+  .summary{
+    padding: 0;
+  }
+  .mdxImage{
+    max-width: 100% !important;
+    margin-top: 12px;
+    height: auto !important;
+  }
+  .bonus{
+    padding: 12px;
+  }
+  .bonus blockquote ul {
+    margin: 0 12px;
+  }
+  .bonus blockquote li{
+    padding: 8px 0;
+  }
+  .endNote{
+    padding: 0;
+    margin: 0 0 64px 0;
+  }
 }
