--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -13,3 +13,10 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 460px) {
+  .navbar a{
+    margin: 24px 12px;
+    font-size: 16px;
+  }
+}
