--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,10 @@ body {
   padding: 0 2rem;
 }
 
+body{
+  padding: 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -27,7 +31,3 @@ a {
 * {
   box-sizing: border-box;
 }
-
-/*strong {*/
-/*    font-family: 'Basier Bold', serif;*/
-/*}*/
