fix: colors, font sizes

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -31,6 +31,9 @@
   text-decoration: underline;
 }
 
+.content h1, .content h2{
+  color: #f7f7f7;
+}
 .content h4 {
   color: #a2b5bb;
 }
@@ -41,11 +44,11 @@
 }
 
 .content code {
-  color: #a9a;
+  color: #7fb7dd
 }
 
 .content strong {
-  color: #ad728b;
+  color: #a4daff;
 }
 
 .content blockquote {
@@ -149,7 +152,7 @@
   }
   .content h2{
     font-size: 1.2rem;
-    margin-top: 36px;
+    margin-top: 46px;
   }
   .content h5{
     font-size: 0.7rem;
@@ -185,5 +188,8 @@
   .endNote{
     padding: 0;
     margin: 0 0 64px 0;
+  }
+  .linkSection{
+    font-size: 13px;
   }
 }
