--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -1,23 +1,3 @@
-.layout {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.link a {
-  font-size: 24px;
-}
-
-.link a:hover {
-  text-decoration: underline;
-}
-
-.subtext {
-  font-size: 16px;
-  color: #d1d1d1;
-}
-
 .content {
   max-width: 800px;
   margin-top: 48px;
@@ -71,12 +51,6 @@
   padding: 8px;
 }
 
-.link {
-  max-width: 500px;
-  margin-top: 48px;
-  margin-bottom: 32px;
-  cursor: pointer;
-}
 
 .mdxImage {
   border-radius: 4px;
@@ -133,6 +107,13 @@
 
 .horizontalLine{
   width: 100%;
+}
+
+@media only screen and (max-width: 790px) {
+  .content h1 {
+    font-size: 1.5rem;
+    line-height: 30px;
+  }
 }
 
 @media only screen and (max-width: 460px) {
